[project]
name = "realtime-info-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
]
[tool.ruff]
line-length = 88 # 한 줄의 최대 길이
select = ["E", "F", "I"] # 기본 오류, 문법 체크, Import 정렬 활성화